cluster-configs/hubble-ui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hubble"
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - host: "hubble.tetragon.cluster"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
